# th

./: .gitignore  CMakeLists.txt  makefile  th
include/: animation.h  bullet.h  collision.h  core.h  entity.h  game.h  log.h  player.h  resManager.h  stage.h  utils.h
scripts/: bu.sh  new.sh
src/: animation.cpp  bullet.cpp  collision.cpp  entity.cpp  game.cpp  log.cpp  main.cpp  player.cpp  resManager.cpp  stage.cpp  utils.cpp
